<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/whatsapp"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/baseline_menu_24">

        <!-- Action buttons (menu, camera, search, profile) -->
        <ImageView
            android:id="@+id/camera_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_camera_alt_24"
            android:contentDescription="@string/camera"
            android:padding="8dp"
            android:layout_gravity="end"/>

        <ImageView
            android:id="@+id/search_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:layout_gravity="end"/>

        <ImageView
            android:id="@+id/profile_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_supervised_user_circle_24"
            android:contentDescription="@string/profile"
            android:padding="8dp"
            android:layout_gravity="end"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Chat List (RecyclerView) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar"
        app:layout_constraintBottom_toTopOf="@id/fab_add_chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--- Floating Action Button (Add Chat) -->

    <!-- Bottom Navigation -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        android:background="@color/orange"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
